Fixed link covered by footer

--- a/web/css/theme/layout/_footer.less
+++ b/web/css/theme/layout/_footer.less
@@ -34,6 +34,9 @@
         .lib-css(background, @footer-middle__background-color);
     }
     .footer-middle {
+        margin-top: -20px;
+    }
+    .footer-top + .footer-middle {
         margin-top: -66px;
     }
 }
